Move service code to common framework
Closes #19
